--- a/README
+++ b/README
@@ -23,3 +23,4 @@ Based on code from:
 Use the data here to make the units of the results comparable to Hinton's paper:
 - http://www.cs.ox.ac.uk/people/misha.denil/hidden/mnist_batches.npz
 
+ver 1
